fix: remove space from invisible blocks in embed sections

--- a/templates/consonant/consonant.css
+++ b/templates/consonant/consonant.css
@@ -559,6 +559,7 @@ footer {
   font-size: 14px;
   display: flex;
   justify-content: center;
+	align-items: center;
   flex-direction: column;
   text-align: center;
   padding: 32px 0px;
